@@ -39,7 +39,7 @@
                         <manifestFile>src/main/resources/MANIFEST.MF</manifestFile>
                     </archive>
                 </configuration>
-            </plugin>
+            </plugin><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>8</source><target>8</target><compilerArgs>--enable-preview</compilerArgs></configuration></plugin>
         </plugins>
     </build>
 
